# oscar-filter

./: Cargo.toml  README.md
src/: cleaner.rs  cli.rs  main.rs  oscar.rs
